# ys-spec-kit

./: .env.example  .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  DOCUMENTATION_QUICK_REFERENCE.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  GOVERNANCE_PHASE_7_COMPLETION.md  GUIDES_IMPLEMENTATION_COMPLETE.md  MERGE_COMPLETE_v0.4.0.md  NEXTSTEPS.md  NPM_README.md  OAUTH_IMPLEMENTATION_CHECKLIST.md  OAUTH_IMPLEMENTATION_COMPLETE.md  README.md  package-lock.json  package.json  pyproject.toml  release_notes.md  test-oauth.sh  v0.4.0_RELEASE_STATUS.md
.archive/: PULL_REQUEST_TEMPLATE_v0.4.0.md  README.md
.github/: copilot-instructions.md
.github/prompts/: audit.prompt.md
.github/workflows/: publish-npm.yml  release.yml
.specify/: .gitkeep  project.json
.specify/memory/: constitution.md
docs/: OAUTH_SETUP.md  README.md  TEAM_INSTALLATION.md  installation.md  local-development.md  quickstart.md
docs/guides/: governance-overview.md  governance-quickstart.md
project-meta/completion-logs/: DOCUMENTATION_VERIFICATION_COMPLETE.md  GOVERNANCE_LAYER_SUMMARY.md  GOVERNANCE_PHASE_6_COMPLETION.md  PHASE_5_COMPLETION_SUMMARY.md  PHASE_6_COMPLETION_SUMMARY.md  README.md
project-meta/releases/: README.md  RELEASE_NOTES_v0.4.0.md
project-meta/status/: README.md  roadmap.md
scripts/: install-python-cli.js
scripts/powershell/: update-agent-context.ps1
specs/001-hardcode-guides-url/: plan.md  quickstart.md  spec.md  tasks.md
specs/002-division-aware-workflow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
(+80 files in other folders)
